--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=evento
 APP_ENV=local
-APP_KEY=base64:FddkjNPCyGOFZHMbsPxMKUiX1FkPNzgPBNUlHN52DoI=
+APP_KEY=base64:LxgWw2t0LGv3Y5zBa26Zo+KiIAAQI3XpHL70e/OIzDw=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=evento
 DB_USERNAME=root
 DB_PASSWORD=
 
