--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "barryvdh/laravel-dompdf": "^0.8.5",
         "fideloper/proxy": "^4.0",
+        "knplabs/knp-snappy": "^1.1",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "simplesoftwareio/simple-qrcode": "^2.0"
